--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/poppins": "^5.1.0",
     "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.1.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
