--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.1.0",
     "next": "15.0.2",
+    "next-themes": "^0.4.3",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
